objects/WT_CI_Funding_History__c.object
<CustomObject>
    <fields>
        <fullName>WT_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CI Funding Histories (Account)</relationshipLabel>
        <relationshipName>CI_Funding_Histories1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WT_Date_of_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Funding_Amount__c</fullName>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Split_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Split Payment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CI Funding History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{0000000000}</displayFormat>
        <label>CI Funding History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI Funding Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>